# camera_manager

./: .gitignore  CMakeLists.txt  camerawidget.cpp  camerawidget.h  camerawidget.ui  flir_camera.cpp  flir_camera.h  frameratecontroller.cpp  frameratecontroller.h  frameratecontroller.ui  ilinked.cpp  ilinked.h  linkedcombobox.cpp  linkedcombobox.h  linkedlineedit.cpp  linkedlineedit.h  linkedslider.cpp  linkedslider.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings_page.cpp  settings_page.h  settingspage.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  utils.cpp  utils.h
